# squash-rest-api

./: .coveralls.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  Dockerfile  Makefile  README.md  README.rst  docker-compose.yaml  pyproject.toml  requirements.txt  run.py  setup.cfg  test.py  uwsgi.ini
.github/workflows/: ci.yaml
app/: __init__.py  auth.py  config.py  decorators.py  error.py  models.py
app/api_v1/: blob.py  code_changes.py  dataset.py  default.py  jenkins.py  job.py  kpms.py  measurement.py  metric.py  monitor.py  package.py  root.py  specification.py  stats.py  status.py  user.py  version.py
app/resources/: jenkins.py  job.py  measurement.py  metric.py  specification.py  user.py
app/tasks/: celery.py  influxdb.py  s3.py
examples/: backfill_ap_verify.ipynb  influxdb_data_model.ipynb  influxdb_data_model.py  inlfuxdb.ipynb  input_influxdb_tag.ipynb
kubernetes/: deployment-template.yaml  replace.sh  service.yaml
kubernetes/nginx/: Dockerfile  nginx.conf
requirements/: dev.in  dev.txt  main.in  main.txt
scripts/: README.rst  contextdb.sh  dump.sh  install-base-packages.sh  restore.sh
src/squash/: __init__.py  app.py  config.py  db.py  error.py  models.py
src/squash/api_v1/: blob.py  code_changes.py  job.py  measurement.py  monitor.py  package.py  root.py  specification.py  stats.py  status.py  version.py
src/squash/tasks/: __init__.py  celery.py  influxdb.py  s3.py
src/squash/tasks/utils/: __init__.py  format.py  mapping.yaml  transformation.py
tests/: __init__.py  conftest.py  test_api.ipynb  test_client.py  tests.py  update_metrics.ipynb
tests/data/: README.rst  job-768.json  verify_job.json
tests/functional/: __init__.py  test_auth.py  test_routes.py
tests/unit/: __init__.py  test_models.py
