[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=3.4"
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = pytest,coverage-report,typing,lint
isolated_build = True

[testenv]
description = Run pytest against {envname}.
deps =
    -r{toxinidir}/requirements/main.txt
    -r{toxinidir}/requirements/dev.txt

setenv =
    SQUASH_API_PROFILE = "squash.config.Testing"
commands =
    coverage run -m pytest {posargs}

[testenv:coverage-report]
description = Compile coverage from each test run.
skip_install = true
deps = coverage[toml]>=5.0.2
depends =
    py37
commands =
    coverage combine
    coverage report

[testenv:typing]
description = Run mypy.
commands =
    mypy app tests setup.py

[testenv:lint]
description = Lint codebase by running pre-commit (Flake8, Black, isort).
skip_install = true
deps =
    pre-commit
commands =
    pre-commit run --all-files

[testenv:docs]
description = Build documentation (HTML) with Sphinx.
commands =
    sphinx-build -n -T -b html -d {envtmpdir}/doctrees docs docs/_build/html
"""

[tool.coverage.run]
parallel = true
branch = true
source = ["squash"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:"
]

[tool.black]
line-length = 79
target-version = ['py37']
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
# Use single-quoted strings so TOML treats the string like a Python r-string
# Multi-line strings are implicitly treated by black as regular expressions

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
known_first_party = ["squash-api", "tests"]
known_third_party = ["boto3", "botocore", "celery", "dateutil", "flasgger", "flask", "flask_jwt", "flask_restful", "flask_sqlalchemy", "numpy", "pymysql", "pytest", "pytz", "redis", "requests", "setuptools", "sqlalchemy", "werkzeug", "yaml"]
skip = ["docs/conf.py"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    'ignore::DeprecationWarning',
]

[flake8]
max-line-length = 79
docstring-convention = "numpy"
extend-exclude = "src/squash/api_v1"
