[metadata]
name = squash-api
description = A REST API for managing the SQuaSH DB https://sqr-009.lsst.io
author = Association of Universities for Research in Astronomy, Inc. (AURA)
author_email = sqre-admin@lists.lsst.org
long_description = file: README.rst, CHANGELOG.rst, LICENSE
long_description_content_type = text/x-rst
url = https://github.com/lsst-sqre/squash-api
project_urls =
    Change log = https://github.com/lsst-sqre/squash-api/master/blob/CHANGELOG.rst
    Source code = https://github.com/lsst-sqre/squash-api
    Issue tracker = https://github.com/lsst-sqre/squash-api/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Natural Language :: English
    Operating System :: POSIX
keywords =
    lsst

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages=find:
python_requires = >=3.7
setup_requires =
    setuptools_scm
# Use requirements/main.in for runtime dependencies instead of install_requires

[options.packages.find]
where = src

[flake8]
max-line-length = 79
# E203: whitespace before :, flake8 disagrees with PEP-8
# W503: line break after binary operator, flake8 disagrees with PEP-8
ignore = E203, W503
docstring-convention = numpy
# docstrings follow the flasgger convention for generating the API docs
extend-exclude = src/squash/api_v1

[mypy]
disallow_untyped_defs = True
disallow_incomplete_defs = True
ignore_missing_imports = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_ignores = True
